<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android.cryptoalert.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.example.android.cryptoalert.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.example.android.cryptoalert.ui.converter.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_converter" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.android.cryptoalert.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>