<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="reminder"
            type="com.example.android.cryptoalert.model.Reminder" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_cardview"
        android:layout_marginVertical="@dimen/margin_vertical_cardview"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_xmiddle">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvCurrencyFrom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="@{}"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                                android:textColor="@android:color/black"
                                tools:text = "@string/currency_btc"/>

                            <ImageView
                                android:id="@+id/ivSwitch"
                                android:layout_width="@dimen/spacing_mxlarge"
                                android:layout_height="@dimen/spacing_mxlarge"
                                app:srcCompat="@drawable/ic_baseline_arrow_right_24"
                                app:tint="@color/grey_40" />

                            <TextView
                                android:id="@+id/tvCurrencyTo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/currency_usd"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                                android:textColor="@color/md_theme_dark_background" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/conversion_example_string"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                                android:textColor="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_xmedium"
                                android:layout_height="0dp" />

                            <com.example.android.cryptoalert.ui.widget.ViewLoadingDotsFade
                                android:id="@+id/viewRateLoading"
                                android:layout_width="8dp"
                                android:layout_height="8dp"
                                android:layout_marginTop="1dp"
                                android:background="@color/md_theme_dark_primaryContainer" />

                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_alignParentEnd="true"
                        android:checked="true"
                        android:translationX="@dimen/spacing_xsmall" />

                </RelativeLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlay_dark_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_xmiddle"
                android:paddingVertical="@dimen/spacing_middle">

                <TextView
                    android:id="@+id/tvRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day_string"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/grey_60" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_baseline_alarm_24"
                    app:tint="@color/grey_40" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_example_string" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>